--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 [Tt]emp/
 [Oo]bj/
 [Bb]uild/
-[Bb]uilds/
+/[Bb]uilds/
+/[Ll]ibrary/
+*.meta
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -23,7 +25,6 @@ ExportedObj/
 *.svd
 *.pdb
 *.opendb
-*.VC.db
 
 # Unity3D generated meta files
 *.pidb.meta
